Kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: expense-tracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: expense-tracker-backend
  template:
    metadata:
      labels:
        app: expense-tracker-backend
    spec:
      containers:
      - name: expense-tracker-backend
        image: samakn/expense-tracker:backend-V1
      
        ports:
        - containerPort: 4500
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
