Kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: expense-tracker
spec:
  type: ClusterIP
  selector:
    app: expense-tracker-backend
  ports:
    - protocol: TCP
      port: 4500
      targetPort: 4500
