Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-frontend-service
spec:
  type: ClusterIP
  selector:
    app: expense-tracker-frontend
  ports:
  
    - protocol: TCP
      port: 80
      targetPort: 80
