Kubernetes/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: expense-tracker
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
