Kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: expense-tracker
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
