Kubernetes/expense-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  namespace: expense-tracker
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:133789123792:certificate/4c07a8c9-97db-43c5-83c6-d5d53c9ffb02
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: expensetk.name.ng
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-frontend-service
                port:
                  number: 80
